# wizzard

./: .gitignore  Procfile  README.md  bookings.py  pyproject.toml
booking/: booking.py
cache/: libcal.py
commands/: commands.py
libcal/: libcal.py
