[tool.poetry]
name = "utk_room_booking_tests"
version = "0.1.0"
description = ""
authors = ["Mark Baggett <mbagget1@utk.edu>"]

[tool.poetry.dependencies]
python = "3.10.4"
Flask = "^2.1.3"
arrow = "^1.2.2"
gunicorn = "^20.1.0"
lxml = "^4.9.1"
requests = "^2.28.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
